@@ -138,14 +138,21 @@
           </item>
          </layout>
         </item>
-        <item row="1" column="0">
+        <item row="1" column="1">
+         <widget class="QCheckBox" name="includeUnrated">
+          <property name="text">
+           <string>Include unrated</string>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="0">
          <widget class="QLabel" name="label">
           <property name="text">
            <string>Songs with duration between:</string>
           </property>
          </widget>
         </item>
-        <item row="1" column="1">
+        <item row="2" column="1">
          <layout class="QHBoxLayout" name="horizontalLayout_3">
           <item>
            <widget class="QSpinBox" name="minDuration">
@@ -195,28 +202,28 @@
           </item>
          </layout>
         </item>
-        <item row="2" column="0">
+        <item row="3" column="0">
          <widget class="QLabel" name="numberOfSongsLabel">
           <property name="text">
            <string>Number of songs in play queue:</string>
           </property>
          </widget>
        </item>
-       <item row="2" column="1">
+       <item row="3" column="1">
         <widget class="QSpinBox" name="numTracks">
          <property name="singleStep">
           <number>10</number>
          </property>
         </widget>
        </item>
-       <item row="3" column="0">
+       <item row="4" column="0">
         <widget class="QLabel" name="maxAgeLabel">
          <property name="text">
           <string>Files added in the last:</string>
          </property>
         </widget>
       </item>
-      <item row="3" column="1">
+      <item row="4" column="1">
        <widget class="QSpinBox" name="maxAge">
         <property name="singleStep">
          <number>10</number>
@@ -229,14 +236,14 @@
         </property>
        </widget>
       </item>
-       <item row="4" column="0">
+       <item row="5" column="0">
         <widget class="QLabel" name="orderLabel">
          <property name="text">
           <string>Order songs:</string>
          </property>
         </widget>
       </item>
-      <item row="4" column="1">
+      <item row="5" column="1">
       <layout class="QHBoxLayout" name="orderLayout">
        <item>
         <widget class="QComboBox" name="order"/>
